--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,7 +7,7 @@
     
     <header>
       <nav>
-	<ul>
+	<ul class="topNavBar">
 	  <li><a id="leftHeaderli" href="/"><h1 id="leftHeader"></h1></a></li>
 	  <li><button id="aboutButton" style="width:100%;">About</button></li>
 	  <li><button id="processButton" style="width:100%;">Our Process</button></li>
@@ -41,19 +41,30 @@
 				
     </div>
     
-    <div class="parallax3" style="text-align:right;">
+    <div class="parallax3" style="text-align:left;">
     	<h1 class="panel3Header">How It Works</h1>
-     	 <p class="thirdP">
+     	 <!--<p class="thirdP">
      	 	Based on their profile, student-athletes are matched with an appropriate mentor.
      	 	Daily data is gathered on each student-athlete, which is analyzed by and discussed with their mentor.
-     	 </p>
+     	 	
+     	 	
+     	 </p>-->
+     	 <div style="width: 1200px; text-align: left;">
+     	 <ol>
+     	 	<li>Create a daily routine that will turn my academic & athletic dreams into reality.</li>
+     	 	<li>Strive mentally, physically & spiritually to execute my routine.</li>
+     	 	<li>Reflect on my daily performance to enhance my accountability & awareness.</li>
+     	 	<li>Gain data-driven insight & personalized recommendations to improve my performance.</li>
+     	 	<li>Optimize my routine to achieve my academic & athletic potential.</li>
+		</ol>
+		</div>
     </div>
     
  	<div class="parallax4" style="text-align:left;"">
     	<h1 class="panel2Header">Our Team</h1>
      	 <p class="secondP">
-     	 	Our experienced student-athlete mentors have attended and competed for the following universities and community colleges:
-     	 	UC Berkeley, Cal Poly SLO, Wesleyan University, City College of San Francisco.
+     	 	<font color="white">Our experienced student-athlete mentors have attended and competed for the following universities and community colleges:
+     	 	UC Berkeley, Cal Poly SLO, Wesleyan University, City College of San Francisco.</font>
      	 </p>
     </div>
     
