--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -51,11 +51,11 @@
      	 </p>-->
      	 <div style="width: 1200px; text-align: left;">
      	 <ol>
-     	 	<li>Create a daily routine that will turn my academic & athletic dreams into reality.</li>
-     	 	<li>Strive mentally, physically & spiritually to execute my routine.</li>
-     	 	<li>Reflect on my daily performance to enhance my accountability & awareness.</li>
-     	 	<li>Gain data-driven insight & personalized recommendations to improve my performance.</li>
-     	 	<li>Optimize my routine to achieve my academic & athletic potential.</li>
+     	 	<li class="process"> <font size="32">1.</font> <font color="#ECB342" size="32">Create</font> a daily routine that will turn my academic & athletic dreams into reality.</li>
+     	 	<li class="process"> <font size="32">2.</font> <font color="#ECB342" size="32">Strive</font> mentally, physically & spiritually to execute my routine.</li>
+     	 	<li class="process"> <font size="32">3.</font> <font color="#ECB342" size="32">Reflect</font> on my daily performance to enhance my accountability & awareness.</li>
+     	 	<li class="process"> <font size="32">4.</font> <font color="#ECB342" size="32">Gain</font> data-driven insight & personalized recommendations to improve my performance.</li>
+     	 	<li class="process"> <font size="32">5.</font> <font color="#ECB342" size="32">Optimize</font> my routine to achieve my academic & athletic potential.</li>
 		</ol>
 		</div>
     </div>
